// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatPullRequests: > Expect basic PR to match snapshot 1`] = `
[
  {
    "additions": 0,
    "age": 1,
    "approvals": 0,
    "approvers": {},
    "author": "AUTHOR",
    "codeCommentAuthorSentimentScore": 0,
    "codeCommentSentimentScore": 0,
    "codeCommentSentimentTotalScore": 0,
    "codeCommentSentiments": {},
    "codeCommenters": {},
    "codeComments": 0,
    "codeCommentsAuthor": 0,
    "commentAuthorSentimentScore": 0,
    "commentSentimentScore": 0,
    "commentSentimentTotalScore": 0,
    "commentSentiments": {},
    "commenters": {},
    "comments": 0,
    "commentsAuthor": 0,
    "cycleTime": 1,
    "deletions": 0,
    "generalCommentAuthorSentimentScore": 0,
    "generalCommentSentimentScore": 0,
    "generalCommentSentimentTotalScore": 0,
    "generalCommentSentiments": {},
    "generalCommenters": {},
    "generalComments": 0,
    "generalCommentsAuthor": 0,
    "mergedAt": "",
    "org": "ORG",
    "prSize": 0,
    "repo": "REPO",
    "url": "",
  },
]
`;

exports[`formatPullRequests: > Expect basic PR values to be correct 1`] = `
[
  {
    "additions": 100,
    "age": 2,
    "approvals": 0,
    "approvers": {},
    "author": "AUTHOR",
    "codeCommentAuthorSentimentScore": 0,
    "codeCommentSentimentScore": 0,
    "codeCommentSentimentTotalScore": 0,
    "codeCommentSentiments": {},
    "codeCommenters": {},
    "codeComments": 0,
    "codeCommentsAuthor": 0,
    "commentAuthorSentimentScore": 0,
    "commentSentimentScore": 0,
    "commentSentimentTotalScore": 0,
    "commentSentiments": {},
    "commenters": {},
    "comments": 0,
    "commentsAuthor": 0,
    "cycleTime": 2,
    "deletions": 100,
    "generalCommentAuthorSentimentScore": 0,
    "generalCommentSentimentScore": 0,
    "generalCommentSentimentTotalScore": 0,
    "generalCommentSentiments": {},
    "generalCommenters": {},
    "generalComments": 0,
    "generalCommentsAuthor": 0,
    "mergedAt": "2000-01-02",
    "org": "ORG",
    "prSize": 200,
    "repo": "REPO",
    "url": "URL",
  },
]
`;

exports[`formatPullRequests: > Expect comments and approvals to be formatted correctly 1`] = `
[
  {
    "additions": 0,
    "age": 1,
    "approvals": 1,
    "approvers": {
      "FRANK": 1,
    },
    "author": "AUTHOR",
    "codeCommentAuthorSentimentScore": 0,
    "codeCommentSentimentScore": 0,
    "codeCommentSentimentTotalScore": 0,
    "codeCommentSentiments": {
      "BILL": 0,
    },
    "codeCommenters": {
      "BILL": 2,
    },
    "codeComments": 2,
    "codeCommentsAuthor": 2,
    "commentAuthorSentimentScore": 0,
    "commentSentimentScore": 0,
    "commentSentimentTotalScore": 0,
    "commentSentiments": {
      "BILL": 0,
      "BOB": 0,
    },
    "commenters": {
      "BILL": 2,
      "BOB": 1,
    },
    "comments": 3,
    "commentsAuthor": 3,
    "cycleTime": 1,
    "deletions": 0,
    "generalCommentAuthorSentimentScore": 0,
    "generalCommentSentimentScore": 0,
    "generalCommentSentimentTotalScore": 0,
    "generalCommentSentiments": {
      "BOB": 0,
    },
    "generalCommenters": {
      "BOB": 1,
    },
    "generalComments": 1,
    "generalCommentsAuthor": 1,
    "mergedAt": "",
    "org": "ORG",
    "prSize": 0,
    "repo": "REPO",
    "url": "",
  },
]
`;
